# pdbman

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  test.txt
assets/: myfile.pdb_new  test2.pdb_insert  top_all36_prot.rtf
example/: file_input.txt  input.txt
src/: TODO  TODO.md  argparse.rs  dispatch.rs  functions (conflicted copy 2021-11-08 151608).rs  functions (conflicted copy 2021-11-08 151816).rs  functions (conflicted copy 2021-11-08 163557).rs  functions.rs  help.rs  lib.rs  main.rs  mode.rs  pdbman.rs  residue_ascii.rs  revertable.rs  select.rs  selection.pest  shell.rs
src/functions/: analyze.rs  calc.rs  edit.rs  get.rs  mod.rs  output.rs  parse.rs  query.rs
src/legacy/: molecule.rs  opt.yml
src/options/: argparse.rs  mod.rs  mode.rs  parse_derive.rs
src/selection/: select.rs
tests/: test_clashes.csv  test_contacts.csv
