[package]
name = "pdbman"
version = "0.8.0"
authors = ["Benedikt M. Flöser <benedikt.floeser@cec.mpg.de>"]
edition = "2021"
description = "Analyzes and edits PDB files for usage in QM/MM calculations with the ORCA Quantum Chemistry package"
license = "GPL-2.0-or-later"

[dependencies]
prettytable-rs = {version = "0.8", default-features = false}
clap = "3.0.0-beta.5"
strum = "0.20.0"
strum_macros = "0.20.1"
lazy-regex = "2.2"
lazy_static = "1.4.0"
itertools = "0.10"
rayon = "1.5"
rustyline = "9.0"
rustyline-derive = "0.5"
env_logger = "0.9"
anyhow = "1.0.44"
colored = "2.0.0"
# pdbtbx = {version = "^0.7", features = ["rayon", "rstar"]}
pdbtbx = {git = "https://github.com/nonnominandus/pdbtbx", branch = "master", features = ["rayon", "rstar"]}
#  pdbtbx = {path = "../pdbtbx", features = ["rayon", "rstar"]}

[dev-dependencies]
prettytable-rs = {version = "0.8.0", default-features = true}
