[package]
name = "pdbman"
version = "0.9.1"
authors = ["Benedikt M. Flöser <benedikt.floeser@cec.mpg.de>"]
edition = "2021"
description = "Analyzes and edits PDB files for usage in QM/MM calculations with the ORCA Quantum Chemistry package"
license = "GPL-2.0-or-later"
readme = "README.md"

[dependencies]
comfy-table = "5"
strum = "0.23"
strum_macros = "0.23"
lazy-regex = "2.2"
lazy_static = "1.4"
itertools = "0.10"
rayon = "1.5"
rustyline = "9.0"
rustyline-derive = "0.6"
env_logger = "0.9"
anyhow = "1.0"
colored = "2.0"
pdbtbx = {version = "0.9", features = ["rayon", "rstar"]}
pest = "2"
pest_derive = "2"
# pdbtbx = {git = "https://github.com/nonnominandus/pdbtbx", branch = "master", features = ["rayon", "rstar"]}
# pdbtbx = {path = "../pdbtbx", features = ["rayon", "rstar"]}

[dependencies.clap]
version = "3.0.10"
default-features = false
features = ["std", "cargo", "color", "suggestions", "unicode"]

[profile.release]
# opt-level = 3
# strip = true
# codegen-units = 1
lto = "off"
debug = 1
incremental = true
